# Students-UI

./: .gitmodules  .graphqlrc.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakeUserPresets.json  pyproject.toml
src/: Calender.qml  Student.cpp  Student.h  Student.hpp  StudentModel.cpp  StudentModel.hpp  Test.cpp  Test.hpp  TestModel.cpp  TestModel.h  aplicationsingleton.hpp  applicationsingleton.cpp  main.cpp  main.qml  main.qml.autosave
src/graphql/: operations.graphql  qtgqlconfig.py  schema.graphql
src/graphql/__generated__/: AddStudentMutation.cpp  AddStudentMutation.hpp  CMakeLists.txt  StudentsQuery.cpp  StudentsQuery.hpp  schema.hpp
