[tool.poetry]
name = "students-ui"
version = "0.1.0"
description = ""
authors = ["uehrlich <uriehrlich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
conan = "^2.0.9"
aqtinstall = "^3.1.6"
qtgql = {path = "3rdparty/qtgql"}
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
